# pypp

./: README.md  pyproject.toml
pypp/: main.py
tests/: test_pypp.py
